--- a/tex-sum/src/index.css
+++ b/tex-sum/src/index.css
@@ -2,7 +2,15 @@
 
 *{
   font-family: "Quicksand";
-  
+
+  /* hides scrollbar */
+  -ms-overflow-style: none;  /* Internet Explorer 10+ */
+  scrollbar-width: none;  /* Firefox */
+}
+
+/* hides scrollbar */
+*::-webkit-scrollbar{
+  display: none; /* Safari and Chrome */
 }
 
 /* body {
